--- a/pupt-lib/package.json
+++ b/pupt-lib/package.json
@@ -64,6 +64,9 @@
     "test:coverage": "vitest run --coverage",
     "lint": "eslint src test components && tsc --noEmit && knip",
     "lint:fix": "eslint src test components --fix",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "npm run docs:build && vitepress preview docs --port 9010",
     "prepare": "husky",
     "release": "semantic-release"
   },
@@ -109,6 +112,7 @@
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.0.11",
+    "vitepress": "^1.6.4",
     "vite-plugin-dts": "^4.5.0",
     "vitest": "^3.0.4",
     "zod": "^3.22.0"
