--- a/pupt-lib/.github/workflows/ci.yml
+++ b/pupt-lib/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ concurrency:
 
 permissions:
   contents: read
+  pages: write
   id-token: write
 
 jobs:
@@ -195,10 +196,55 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
+  # Documentation build job
+  docs-build:
+    name: Build Documentation
+    runs-on: ubuntu-latest
+    needs: [build, test-node, test-browser]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22.x
+          cache: npm
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Install dependencies
+        run: npm ci
+        env:
+          HUSKY: 0
+
+      - name: Build documentation
+        run: npm run docs:build
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: docs/.vitepress/dist
+
+  # Documentation deployment job
+  docs-deploy:
+    name: Deploy Documentation
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    needs: [coverage, docs-build]
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: [lint, build, test-node, test-browser, coverage]
+    needs: [lint, build, test-node, test-browser, coverage, docs-deploy]
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
     permissions:
       contents: write
