--- a/pupt/package.json
+++ b/pupt/package.json
@@ -101,6 +101,7 @@
     "command-exists": "^1.2.9",
     "commander": "^14.0.0",
     "cosmiconfig": "^9.0.0",
+    "env-paths": "^4.0.0",
     "execa": "^9.6.0",
     "fs-extra": "^11.3.1",
     "glob": "^11.0.3",
