--- a/pupt-sde/package.json
+++ b/pupt-sde/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "vitest run",
     "test:watch": "vitest",
@@ -24,7 +23,7 @@
     "provenance": true
   },
   "files": [
-    "src/prompts",
+    "prompts",
     "README.md",
     "LICENSE"
   ],
@@ -51,7 +50,7 @@
     "semantic-release": "^25.0.3",
     "vitest": "^3.0.4"
   },
-  "dependencies": {
+  "peerDependencies": {
     "pupt-lib": "^1.3.5"
   }
 }
