--- a/pupt-lib/.github/workflows/ci.yml
+++ b/pupt-lib/.github/workflows/ci.yml
@@ -177,6 +177,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test-node, test-browser]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Download node coverage
         uses: actions/download-artifact@v4
         with:
