--- a/pupt-react/package.json
+++ b/pupt-react/package.json
@@ -40,6 +40,7 @@
     "lint": "eslint src test && tsc --noEmit",
     "lint:fix": "eslint src test --fix",
     "test": "vitest run",
+    "test:ci": "vitest run --no-coverage --passWithNoTests",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "typecheck": "tsc --noEmit",
