--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,12 @@
 name: Release
 
 on:
-    # workflow_run trigger temporarily disabled for release recovery
-    # workflow_run:
-    #     workflows: ["CI"]
-    #     types:
-    #         - completed
-    #     branches:
-    #         - master
+    workflow_run:
+        workflows: ["CI"]
+        types:
+            - completed
+        branches:
+            - master
     workflow_dispatch:
         inputs:
             publish-only:
