--- a/pupt/tsconfig.json
+++ b/pupt/tsconfig.json
@@ -6,7 +6,10 @@
     "rootDir": "./src",
     "resolveJsonModule": true,
     "noUnusedLocals": false,
-    "noUnusedParameters": false
+    "noUnusedParameters": false,
+    "paths": {
+      "@pupt/lib": ["../pupt-lib/dist/src"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test"]
